# blendCnC

./: BUILD_NOTES.txt  CMakeLists.txt  README.md
build_files/build_environment/: BUILD_NOTES.txt
build_files/buildbot/config/: blender_linux.cmake
build_files/cmake/: macros.cmake
build_files/cmake/platform/: platform_unix.cmake
intern/: CMakeLists.txt
intern/ghost/: CMakeLists.txt  GHOST_C-api.h  GHOST_ISystem.h  GHOST_Types.h
intern/ghost/intern/: GHOST_C-api.cpp  GHOST_EventManager.cpp  GHOST_EventManager.h  GHOST_ISystem.cpp  GHOST_System.cpp  GHOST_System.h  GHOST_SystemPathsUnix.cpp  GHOST_SystemX11.cpp  GHOST_SystemX11.h
intern/locale/: CMakeLists.txt  boost_locale_wrapper.cpp  boost_locale_wrapper.h
intern/opencolorio/: CMakeLists.txt  ocio_capi.cc  ocio_impl.h
release/datafiles/: splash_template.xcf  startup.blend
release/scripts/addons/: curve_simplify.py
release/scripts/modules/: bpy_types.py  rna_keymap_ui.py  sys_info.py
source/: CMakeLists.txt
source/blender/: CMakeLists.txt
source/blender/blenkernel/: BKE_blender_version.h  BKE_bullet.h  BKE_camera.h  BKE_collision.h  BKE_context.h  BKE_curve.h  BKE_displist.h  BKE_global.h  BKE_group.h  BKE_image.h  BKE_lattice.h  BKE_library.h  BKE_main.h  BKE_material.h  BKE_mesh.h  BKE_modifier.h  BKE_object.h  BKE_rigidbody.h  BKE_scene.h  BKE_screen.h  BKE_subsurf.h  BKE_texture.h  BKE_undo_system.h  CMakeLists.txt
source/blender/blenlib/: BLI_callbacks.h  CMakeLists.txt
source/blender/blenloader/: CMakeLists.txt
source/blender/blentranslation/: BLT_translation.h
source/blender/datatoc/: CMakeLists.txt
source/blender/editors/: CMakeLists.txt
source/blender/editors/curve/: CMakeLists.txt  curve_intern.h  curve_ops.c  editcurve.c  editcurve_add.c  editcurve_select.c  editcurve_undo.c  editfont.c  editfont_undo.c
source/blender/editors/datafiles/: CMakeLists.txt
source/blender/editors/include/: ED_curve.h  ED_datafiles.h  ED_image.h  ED_mesh.h  ED_object.h  ED_physics.h  ED_screen.h  ED_screen_types.h  ED_space_api.h  ED_transform.h  ED_view3d.h  UI_interface.h
source/blender/editors/interface/: CMakeLists.txt  interface.c  interface_context_menu.c  interface_draw.c  interface_eyedropper_color.c  interface_eyedropper_datablock.c  interface_eyedropper_depth.c  interface_eyedropper_driver.c  interface_handlers.c  interface_icons.c  interface_intern.h  interface_layout.c  interface_ops.c  interface_region_tooltip.c  interface_templates.c  interface_widgets.c  resources.c  view2d.c  view2d_ops.c
source/blender/editors/io/: CMakeLists.txt  io_cache.c  io_ops.c
source/blender/editors/lattice/: CMakeLists.txt  editlattice_select.c  editlattice_tools.c  editlattice_undo.c  lattice_ops.c
source/blender/editors/mesh/: CMakeLists.txt  editmesh_add.c  editmesh_bevel.c  editmesh_bisect.c  editmesh_extrude.c  editmesh_extrude_screw.c  editmesh_extrude_spin.c  editmesh_inset.c  editmesh_intersect.c  editmesh_knife.c  editmesh_knife_project.c  editmesh_loopcut.c  editmesh_path.c  editmesh_rip.c  editmesh_select.c  editmesh_tools.c  editmesh_undo.c  editmesh_utils.c  mesh_data.c  mesh_intern.h  mesh_navmesh.c  mesh_ops.c  meshtools.c
source/blender/editors/object/: CMakeLists.txt  object_add.c  object_data_transfer.c  object_edit.c  object_group.c  object_hook.c  object_intern.h  object_lod.c  object_modes.c  object_modifier.c  object_ops.c  object_relations.c  object_select.c  object_transform.c  object_vgroup.c
source/blender/editors/physics/: CMakeLists.txt  physics_intern.h  physics_ops.c  rigidbody_constraint.c  rigidbody_object.c
source/blender/editors/screen/: area.c  screen_context.c  screen_edit.c  screen_ops.c  screendump.c
source/blender/editors/space_api/: spacetypes.c
source/blender/editors/space_buttons/: buttons_context.c  buttons_texture.c  space_buttons.c
source/blender/editors/space_console/: console_draw.c
source/blender/editors/space_file/: CMakeLists.txt  filelist.c  filesel.c  space_file.c
source/blender/editors/space_image/: CMakeLists.txt  image_buttons.c  image_draw.c  image_edit.c  image_intern.h  image_ops.c  space_image.c
source/blender/editors/space_info/: info_draw.c  info_report.c  info_stats.c  space_info.c
source/blender/editors/space_outliner/: outliner_draw.c  outliner_edit.c  outliner_intern.h  outliner_ops.c  outliner_select.c  outliner_tools.c  outliner_tree.c  space_outliner.c
source/blender/editors/space_script/: space_script.c
source/blender/editors/space_text/: space_text.c  text_draw.c  text_ops.c
source/blender/editors/space_view3d/: CMakeLists.txt  drawmesh.c  drawobject.c  space_view3d.c  view3d_buttons.c  view3d_camera_control.c  view3d_draw.c  view3d_edit.c  view3d_fly.c  view3d_header.c  view3d_intern.h  view3d_iterators.c  view3d_ops.c  view3d_ruler.c  view3d_select.c  view3d_snap.c  view3d_utils.c  view3d_view.c  view3d_walk.c
source/blender/editors/transform/: CMakeLists.txt  transform.c  transform.h  transform_constraints.c  transform_conversions.c  transform_generics.c  transform_manipulator.c  transform_ops.c  transform_orientations.c  transform_snap.c  transform_snap_object.c
source/blender/editors/undo/: ed_undo.c  memfile_undo.c  undo_system_types.c
source/blender/editors/util/: CMakeLists.txt  ed_transverts.c  ed_util.c
source/blender/gpu/: CMakeLists.txt  GPU_draw.h  GPU_framebuffer.h  GPU_material.h  GPU_shader.h
source/blender/imbuf/: CMakeLists.txt  IMB_imbuf.h  IMB_imbuf_types.h
source/blender/makesdna/: DNA_ID.h  DNA_cachefile_types.h  DNA_camera_types.h  DNA_curve_types.h  DNA_defs.h  DNA_gpu_types.h  DNA_image_types.h  DNA_lamp_types.h  DNA_lattice_types.h  DNA_material_types.h  DNA_mesh_types.h  DNA_meshdata_types.h  DNA_modifier_types.h  DNA_object_enums.h  DNA_object_types.h  DNA_outliner_types.h  DNA_scene_types.h  DNA_space_types.h  DNA_texture_types.h  DNA_userdef_types.h  DNA_view3d_types.h  DNA_windowmanager_types.h  DNA_world_types.h
source/creator/: CMakeLists.txt  creator.c  creator_args.c  creator_intern.h  creator_signals.c
tests/python/: CMakeLists.txt
(+224 files in other folders)
